--- a/css/style.css
+++ b/css/style.css
@@ -98,3 +98,12 @@ canvas {
   width: 20%;
   height: 70%;
 }
+
+#start {
+  width: 300px;
+  height: 125px;
+  font-size: 80px;
+  color: black;
+  background-image: url('../images/peach.jpg') ;
+  background-size: 100% 100%;
+}
