--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ canvas {
 }
 
 .description {
+  font-style: oblique;
   font-size: 25px;
   color: black;
   letter-spacing: 2px;
@@ -95,6 +96,7 @@ canvas {
 
 }
 #main-page {
+  
   width: 20%;
   height: 70%;
 }
