--- a/css/style.css
+++ b/css/style.css
@@ -90,9 +90,11 @@ canvas {
 .description {
   font-style: oblique;
   font-size: 25px;
+  font-weight: bold;
   color: black;
   letter-spacing: 2px;
   text-align: left;
+  text-shadow: 4px;
 
 }
 #main-page {
@@ -105,6 +107,7 @@ canvas {
   width: 300px;
   height: 125px;
   font-size: 80px;
+  font-weight: bold;
   color: black;
   background-image: url('../images/peach.jpg') ;
   background-size: 100% 100%;
